// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
Array [
  "_id",
  "accountStatus",
  "emailAddress",
  "followersCount",
  "followingCount",
  "ratingsTotal",
  "reviewsCount",
  "sharedCount",
  "tokens",
  "types",
  "username",
]
`;

exports[` 2`] = `
Array [
  "_id",
  "accountStatus",
  "emailAddress",
  "followersCount",
  "followingCount",
  "ratingsTotal",
  "reviewsCount",
  "sharedCount",
  "tokens",
  "types",
  "username",
]
`;

exports[` 3`] = `
Array [
  "_id",
  "accountStatus",
  "emailAddress",
  "followersCount",
  "followingCount",
  "ratingsTotal",
  "reviewsCount",
  "sharedCount",
  "tokens",
  "types",
  "username",
]
`;

exports[` 4`] = `
Array [
  "_id",
  "accountStatus",
  "emailAddress",
  "followersCount",
  "followingCount",
  "ratingsTotal",
  "reviewsCount",
  "sharedCount",
  "tokens",
  "types",
  "username",
]
`;

exports[`## Drops feed APIs # GET /api/feed/drops should get user's 0 drop feed 1`] = `
Array [
  "_id",
  "amISubscribed",
  "createdAt",
  "posted",
  "products",
  "scheduledAt",
  "seller",
  "status",
  "subscribers",
  "updatedAt",
  "uuid",
]
`;

exports[`## Drops feed APIs # GET /api/feed/drops should get user's 0 drop feed 2`] = `
Array [
  "_id",
  "username",
]
`;

exports[`## Drops feed APIs # GET /api/v2/drops/:uuid should get one drop 1`] = `
Array [
  "_id",
  "createdAt",
  "posted",
  "products",
  "scheduledAt",
  "seller",
  "status",
  "subscribers",
  "updatedAt",
  "uuid",
]
`;

exports[`## Drops feed APIs # GET /api/v2/drops/:uuid should get one drop 2`] = `
Array [
  "_id",
  "username",
]
`;

exports[`## Drops feed APIs # POST /api/v2/drops should create a drop immediately with one product: drop 1`] = `
Array [
  "_id",
  "createdAt",
  "posted",
  "products",
  "scheduledAt",
  "seller",
  "status",
  "subscribers",
  "updatedAt",
  "uuid",
]
`;

exports[`## Drops feed APIs # POST /api/v2/drops should create a drop immediately with one product: product 1`] = `
Array [
  "_id",
  "categoryIds",
  "createdAt",
  "currency",
  "description",
  "dropId",
  "locality",
  "photoURIs",
  "price",
  "quantity",
  "seller",
  "status",
  "tags",
  "typeIds",
  "updatedAt",
  "uuid",
  "weight",
]
`;
